--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -84,8 +84,8 @@
                             lastPeerId = peer.id;
                         }
 
-                        console.log('CID: ' + peer.id);
-		        document.getElementById("status").innerHTML = 'CID: ' + peer.id;
+                        console.log('VID: ' + peer.id);
+		        document.getElementById("status").innerHTML = 'VID: ' + peer.id;
                     });
 peer.on('disconnected', function () {
                         
