--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -15,6 +15,7 @@
 <div id="status" ></div>
 <div id="toolbar">
 <button onclick="snap();">SNAP</button>
+<button onclick="snap();" class="flashswitch">FLASH</button>
 
 </div>
 <canvas id="canvas" onclick="hideCanvas();"></canvas><br>
