--- a/JsCam/aicam/view/index.html
+++ b/JsCam/aicam/view/index.html
@@ -15,7 +15,7 @@
 <div id="status" ></div>
 <div id="toolbar">
 <button onclick="snap();">SNAP</button>
-<button onclick="snap();" class="flashswitch">FLASH</button>
+<button onclick="flashLight();">FLASH</button>
 
 </div>
 <canvas id="canvas" onclick="hideCanvas();"></canvas><br>
@@ -116,6 +116,7 @@ peer.on('disconnected', function () {
   console.log("Connected to: " + conn.peer);
   document.getElementById("status").innerHTML = "Connected to: " + conn.peer;
   conn.send('sharescreen');
+  conn.send('flashon');
   document.getElementById("qrContainer").hidden = true;
   document.getElementById("camContainer").style.display = "block";
 });
@@ -145,6 +146,11 @@ peer.on('call', function(call) {
 		context.drawImage(video,0,0);
 		canvas.style.display = "block";
 	}
+	
+	function flashLight(){
+		
+	}
+	
 	function hideCanvas(){
 		canvas.style.display = "none";
 	}
@@ -190,6 +196,7 @@ peer.on('call', function(call) {
   window.history.pushState("", "", "/JsCam/aicam/view?rcid="+conn.peer);
   remotePeerId = getParameterByName("rcid",code.data);
   conn.send('sharescreen');
+  conn.send('flashon');
   remoteIdFound = true;
   document.getElementById("qrContainer").hidden = true;
   document.getElementById("camContainer").style.display = "block";
